# RastreioBot

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  apicainiao.py  apicorreios.py  apigeartrack.py  apitrackingmore.py  async_routine.py  async_trackingmore.py  bot.conf_sample  check_update.py  count.py  cron  data_postagem_migration.py  db.py  del_one.py  del_routine.py  docker-compose.yml  firstlog.py  graph.py  local.env  logger.py  misc.py  msgs.py  pyproject.toml  rastreiobot.py  requirements.txt  routine.py  setup.cfg  stats.py  status.py  stopped.py  utils.py  webhook.py
.github/: FUNDING.yml  coverage.sh
.github/workflows/: ci.yml  deploy.yml
apis/: apicorreios.py  apiloggi.py  apitrackingmore.py
carriers/: __init__.py  correios.py  trackingmore.py
config/: mongo_connector.py
domain/: user.py
rastreio/: __main__.py  db.py  progressbar.py
rastreio/providers/: correios.py
rastreio/workers/: __init__.py  clean_packages.py  update_packages.py
rastreiobot/: patterns.py  settings.py  views.py
rastreiobot/templates/: info.md  lista.md
tests/: conftest.py  test_api_correios.py  test_carriers.py  test_helloworld.py  test_rastreiobot.py  test_update_packages.py
tests/data/: correios-package-in-transit.json
utils/: anuncieaqui.py  misc.py  msgs.py
