[tool.poetry]
name = "rastreio"
version = "0.1.0"
description = ""
authors = ["Gabriel R F <github@gabrf.com>"]

[tool.poetry.scripts]
rastreio = 'rastreio.__main__:cli'

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.14.3"
motor = "^2.5.0"
click = "^8.0.1"
pyTelegramBotAPI = "^3.8.2"
requests = "^2.26.0"
sentry-sdk = "^1.3.1"
trackingmore = "^0.2"
aiohttp = "^3.7.4"
Flask = "^2.2.5"
rich = "^10.6.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.31.1"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^5.5"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
